2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-archive.el (mm-dissect-archive): Use it to get all file names.
	Use recursive deletion.

	* gnus-util.el (gnus-recursive-directory-files): New function.

	* mm-archive.el (mm-archive-list-files): Inline text and image parts.
	(mm-archive-decoders): Add tgz support.

	* mm-decode.el (mm-shr): Make sure that the HTML ends with a newline.
	Otherwise inserting text into the Gnus buffer can look odd.

	* gnus-art.el (gnus-mime-inline-part): Slight clean-up.

	* mm-archive.el (mm-archive-decoders): Add support for tar.

	* gnus.el (gnus-logo-color-alist): Change the colours for Ma Gnus.

	* nnmail.el (nnmail-extra-headers): Add Cc to the default.

2012-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-dissect-singlepart): Check that the decoder exists.

	* mm-archive.el: New file.

	* mm-decode.el (mm-dissect-singlepart): Use it to decode ms-tnef files.

	* mm-util.el (mm-find-buffer-file-coding-system): Comment fix.

	* message.el (message-goto-*): Make all the `message-goto-*' commands
	push the mark before moving point.  This makes it easier to go back to
	where you came from after editing whatever you jumped to.

2012-01-31  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Ma Gnus v0.1 is released.

2012-01-31  Jim Meyering  <jim@meyering.net>

	* gnus-agent.el (gnus-agent-expire-unagentized-dirs):
        Correct a comment (insert "not") and hide nominally-doubled "to".

2012-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-version): Change name to "Ma Gnus".

2012-01-30  Philipp Haselwarter  <philipp.haselwarter@gmx.de>  (tiny change)

	* gnus-agent.el (gnus-agent-auto-agentize-methods): Point to the Agent
	section in the manual.

2012-01-30  Lars Ingebrigtsen  <larsi@gnus.org>

	* rfc2047.el (rfc2047-encode-region): Allow not folding the encoded
	words.
	(rfc2047-encode-string): Ditto.
	(rfc2047-encode-parameter): Don't fold parameters.  Some MUAs do not